wordpress_latest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpresslatest
  labels:
    name: wordpresslatest
