wordpress_latest/ingress.yml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ingress
  namespace: wordpress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: wordpress.sepog.fortaleza.ce.gov.br
      http:
        paths:
        - backend:
              service:
                name: wordpress
                port:
                  number: 80
          path: /
          pathType: Prefix

...
